...
    val icon: ImageVector,
    val group: TagGroup,
    val openTag: String,
    val closeTag: String = "</$element>"
) {
    // Text
    Bold("Bold", "strong", Icons.Outlined.FormatBold, TagGroup.Text, "<strong>", "</strong>"),
    Italic("Italic", "em", Icons.Outlined.FormatItalic, TagGroup.Text, "<em>", "</em>"),
    Underline("Underline", "u", Icons.Outlined.FormatUnderlined, TagGroup.Text, "<u>", "</u>"),
    Strike("Strike", "s", Icons.Outlined.FormatStrikethrough, TagGroup.Text, "<s>", "</s>"),
    Superscript("Superscript", "sup", Icons.Outlined.Superscript, TagGroup.Text, "<sup>", "</sup>"),
    Subscript("Subscript", "sub", Icons.Outlined.Subscript, TagGroup.Text, "<sub>", "</sub>"),
    Small("Small", "small", Icons.Outlined.FormatSize, TagGroup.Text, "<small>", "</small>"),
...
